--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "framer-motion": "^4.1.17",
     "next": "11.0.1",
+    "next-translate": "^1.0.7",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-click-away-listener": "^2.0.3",
+    "react-dom": "17.0.2",
+    "react-intersection-observer": "^8.32.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.3.1",
     "eslint": "7.30.0",
-    "eslint-config-next": "11.0.1"
+    "eslint-config-next": "11.0.1",
+    "postcss": "^8.3.5",
+    "tailwindcss": "^2.2.4"
   }
 }
