--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "aos": "^2.3.4",
     "framer-motion": "^4.1.17",
     "next": "11.0.1",
     "next-translate": "^1.0.7",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-click-away-listener": "^2.0.3",
-    "react-dom": "17.0.2",
-    "react-intersection-observer": "^8.32.0"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.1",
