--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "framer-motion": "^4.1.17",
     "next": "11.0.1",
     "next-translate": "^1.0.7",
+    "nodemailer": "^6.6.3",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-click-away-listener": "^2.0.3",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.12.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.1",
