--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "17.0.2",
     "react-click-away-listener": "^2.0.3",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.12.2"
+    "react-hook-form": "^7.12.2",
+    "react-whatsapp-widget": "^1.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.1",
