--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap  --config next-sitemap-custom.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
     "aos": "^2.3.4",
     "framer-motion": "^4.1.17",
     "next": "11.0.1",
+    "next-sitemap": "^1.6.157",
     "next-translate": "^1.0.7",
     "nodemailer": "^6.6.3",
     "nprogress": "^0.2.0",
