--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild" : "next-sitemap --config next-sitemap-custom.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
