--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postbuild" : "next-sitemap --config next-sitemap-custom.js"
+    "lint": "next lint"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
